# Repo-rter

./: .gitignore  ABOUT.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh.md  SECURITY.md  package-lock.json  package.json  patch_i18n.js  vitest.config.ts  vitest.setup.ts
.agents/superpowers/plans/: 2026-07-17-v0.4.3-tech-debt.md  2026-07-17-v0.4.4-secure-storage.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  secrets.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Dashboard.tsx  DashboardSkeleton.tsx  EmptyState.tsx  GlobalTrafficChart.tsx  LoginScreen.tsx  MetricCard.tsx  Providers.tsx  SettingsModal.tsx  ToastProvider.tsx  TrafficChart.tsx
src/hooks/: useBackgroundSync.test.ts  useBackgroundSync.ts
src/lib/: api.ts  auth.test.ts  auth.ts  crypto.ts  export.ts  github.ts  i18n.ts  secrets.test.ts  secrets.ts  storage.test.ts  storage.ts  sync.ts
src/lib/locales/: ar.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  id.ts  index.test.ts  index.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh.ts
